<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:gravity="center_horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
            android:id="@+id/edit_username"
            android:background="@drawable/biankuang_login_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/pwd_find_tips"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"/>

    <EditText
            android:id="@+id/edit_pwd"
            android:background="@drawable/biankuanglogin_passwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/log_passwd_tips"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn_login"
            android:text="@string/log_text_login"
            android:layout_marginTop="50dp"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_forgetten"/>

        <View
                android:layout_width="1dp"
                android:layout_height="17dp"
                android:background="@color/black"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_register"
                />
    </LinearLayout>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/qq_login"
            android:layout_marginTop="30dp"/>
</LinearLayout>
