<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ImageView
            android:id="@+id/productImg"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/products_shoes"
            android:scaleType="center"/>

    <ImageView
            android:id="@+id/userHeadImg"
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:layout_height="match_parent"
            android:src="@drawable/products_shoes_userphoto"
            android:scaleType="center"/>

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="2.5"
            android:gravity="center_vertical">

        <TextView
                android:id="@+id/nickName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/itme_product_who_get"
                />

        <TextView
                android:id="@+id/detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/itme_product_detail"/>

        <TextView
                android:id="@+id/luckyCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/itme_product_luckycode"/>

        <TextView
                android:id="@+id/publishTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/itme_product_finished_time"/>

    </LinearLayout>

    <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:src="@drawable/productsinfo_arrow_right"
            android:scaleType="centerInside"/>
</LinearLayout>