<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/grey"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="150dp">


        <ImageView
                android:id="@+id/img_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:src="@drawable/userinfo_icon_login"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:layout_marginTop="10dp"
                android:text="凑份高手"/>
    </LinearLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:id="@+id/my_history"
            >

        <ImageView
                style="@style/item_img_left_style"
                android:src="@drawable/userinfo_icon_blue"/>

        <TextView
                style="@style/item_text_center_style"
                android:text="@string/user_account_action_list"/>

        <ImageView
                style="@style/item_img_right_style"
                android:src="@drawable/share_arrow_right"
                />
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:id="@+id/my_product"
            >

        <ImageView
                style="@style/item_img_left_style"
                android:src="@drawable/userinfo_icon_green1"/>

        <TextView
                style="@style/item_text_center_style"
                android:text="@string/user_account_action_getlist"/>

        <ImageView
                style="@style/item_img_right_style"
                android:src="@drawable/share_arrow_right"
                />
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:id="@+id/my_account"
            >

        <ImageView
                style="@style/item_img_left_style"
                android:src="@drawable/userinfo_icon_green2"/>

        <TextView
                style="@style/item_text_center_style"
                android:text="@string/user_account_trade_list"/>

        <ImageView
                style="@style/item_img_right_style"
                android:src="@drawable/share_arrow_right"
                />
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:id="@+id/my_address"
            >

        <ImageView
                style="@style/item_img_left_style"
                android:src="@drawable/userinfo_icon_orange"/>

        <TextView
                style="@style/item_text_center_style"
                android:text="@string/user_account_address"/>

        <ImageView
                style="@style/item_img_right_style"
                android:src="@drawable/share_arrow_right"
                />
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:id="@+id/my_msg"
            >

        <ImageView
                style="@style/item_img_left_style"
                android:src="@drawable/userinfo_icon_red"/>

        <TextView
                style="@style/item_text_center_style"
                android:text="@string/user_account_message"/>

        <ImageView
                style="@style/item_img_right_style"
                android:src="@drawable/share_arrow_right"
                />
    </RelativeLayout>

</LinearLayout>