<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_msg_main_item"
                android:orientation="horizontal">

    <ImageView
            android:id="@+id/start_img_4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/products_book_photo"
            android:layout_alignParentLeft="true"
            android:paddingLeft="@dimen/left_spin_msg"
            android:paddingRight="15dp"
            />

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/start_img_4"
            android:layout_toLeftOf="@+id/imageView_4"
            android:gravity="center_vertical"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/itme_product_who_get"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textSize="17sp"
                />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_lucky_produce_count"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textSize="17sp"
                />

        <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/item_lucky_produce_action_id"-->
        <!--android:layout_gravity="center_vertical"-->
        <!--android:gravity="center_vertical"-->
        <!--android:textSize="17sp"-->
        <!--/>-->

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_lucky_produce_action_time"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textSize="17sp"
                />
    </LinearLayout>

    <ImageView
            android:padding="17dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:src="@drawable/chat_arrow_right"
            android:id="@+id/imageView_4"/>
</RelativeLayout>
